reduce the spacing issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -130,6 +130,29 @@ border-radius: 12px;
 .OurExperts{
 margin-top:30px;
 }
+.section{
+  display: flex;
+  justify-content: flex-start;
+}
+.content-section{
+  width: 70%;
+  margin-left:10px;
+  margin-right: 0px;
+}
+.content-section p{
+  margin-top: 2px;
+}
+.content-section a{
+  padding-top: 0px;
+}
+.image-section{
+  height:102px;
+  width:30%;
+  background-position:top;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+}
 #link{
 font-size: 16px;
 }
